--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "Bootstrap",
     "App"
   ],
-  "author": "",
+  "author": "atayal4",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ashishtayal89/create-node-basic-app/issues"
